--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,20 @@ nav{
     border: 1px solid black;
 }
 
+#output{
+    text-align: center;
+    padding-top: 80px;
+    font-size: 2em;
+}
+
 .blue{
     background-color: rgb(68, 68, 233);
 }
 
 .red-bomb{
     background-color: red;
+}
+
+.game-over{
+    pointer-events: none;
 }
